<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">SendToDune</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="quality">Quality</string>
    <string name="ip_address">IP-address</string>
    <string name="playlink_stop">Stop current video</string>
    <string name="play">Play</string>
    <string name="save">Save</string>
    <string name="network_error">: A communication error with the player !!!</string>
    <string name="save_settings">The settings are saved !!!</string>
</resources>
